Fix AutoPlay:<No se puede utilizar el autoplay cuando esta cargando la pagina, porque los navegadores lo bloquean, tambien se agrego el cambio de 100vh por 100dvh, para que aparezca un overflow en mobile>

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100dvh;
     background-image: url(./assets/imgs/building.jpg);
     background-size: cover;
     background-position: center;
